# tic-tac-toe-challenge-mkramer

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  app.py  mypy.ini  pyproject.toml  requirements.txt
tests/: conftest.py  test_api.py  test_db.py
tic_tac_toe/: __init__.py  api.py  db.py  game_ui.py
tic_tac_toe/assets/: styles.css
